--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "typescript-config/base.json",
+  "extends": "../../packages/typescript-config/base.json",
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
@@ -16,11 +16,6 @@
     "noEmit": false,
     "jsx": "react"
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
